fixing page width on safari on iphone 15

--- a/Styles/landingPage.css
+++ b/Styles/landingPage.css
@@ -5,8 +5,8 @@
 }
 /* styles */
 #landingPage{
-    width: 100vw;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
     background: rgb(2,0,36);
     background: linear-gradient(152deg, rgba(2,0,36,1) 0%, rgba(154,154,154,1) 50%, rgba(255,255,255,1) 100%);
     background-image: url('../Images/IMG_2594.JPG');
